<resources>
    <string name="app_name">Team 60</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>

    <string name="add">ADD</string>

    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    
    <string name="foodndrinks">Food and Drinks</string>
    <string name="health">Health</string>
    <string name="leisure">Leisure</string>
    <string name="transportation">Transportation</string>
    <string name="others">Others</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="app_title">Expense Manager</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="list_transactions">List Transactions</string>
    <string name="view_statistics">View Statistics</string>
    <string name="title_activity_add_income">AddIncomeActivity</string>
    <string name="title_activity_list_transaction">ListTransaction</string>
    <string name="summary_budget">Total Income</string>
    <string name="summary_expenses">Total Expenses</string>
    <string name="summary_liabilities">Outstanding Expenses</string>
    <string name="summary_savings">Remaining Savings Target</string>
</resources>
