<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.coditsuisse.team60.expensetracker.AddExpenseActivity"
                android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/expense_amount"
        android:layout_gravity="center"
        android:hint="Expenses Amount" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:showDividers="end">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:id="@+id/expense_others"
                android:onClick="onRadioButtonClicked"
                android:checked="true"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodndrinks"
                android:id="@+id/expense_foodndrinks"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:id="@+id/expense_health"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leisure"
                android:id="@+id/expense_leisure"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportation"
                android:id="@+id/expense_transportation"
                android:onClick="onRadioButtonClicked"/>
            </RadioGroup>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/date"
            android:onClick="showDatePickerDialog"
            android:hint="Set a date"
            android:enabled="true"
            android:editable="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/expense_note"
            android:hint="Note"
            android:clickable="true" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:id="@+id/add_expense_button"
        android:layout_gravity="right" />

</LinearLayout>
