<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:text="@string/summary_budget"
                    android:layout_gravity="center_horizontal"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalIncomeText"
                    android:text=""
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="60dp"
                    style="@style/Base.TextAppearance.AppCompat.Display2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_expenses"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalExpenseText"
                    android:text=""
                    style="@style/Base.TextAppearance.AppCompat.Display2"
                    android:paddingTop="60dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_savings"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/SavingsTargetText"
                    style="@style/Base.TextAppearance.AppCompat.Display2"
                    android:paddingTop="60dp"
                    android:text=""
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_liabilities"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/OutstandingText"
                    style="@style/Base.TextAppearance.AppCompat.Display2"
                    android:paddingTop="60dp"
                    android:text=""
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
